--- a/index.html
+++ b/index.html
@@ -6,84 +6,160 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <title>Discover Dublin</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top ">
-      <a class="navbar-brand" href="#">Discover Dublin</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <a class="navbar-brand" href="#">Discover Dublin</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse mr-auto" id="navbarNav">
-        <ul class="navbar-nav mt-md-0" id="Menu">
-          <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
-            <a class="nav-link" href="attractions.html">City Center Attractions</a>
-          </li>
-          <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
-            <a class="nav-link" href="outdoor.html">The Great Outdoors</a>
-          </li>
-          <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
-            <a class="nav-link" href="restaurant.html">Restaurants | Iconic Pubs</a>
-          </li>
-        </ul>
-      </div>
+        <div class="collapse navbar-collapse mr-auto" id="navbarNav">
+            <ul class="navbar-nav mt-md-0" id="Menu">
+                <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
+                    <a class="nav-link" href="about-section">About Dublin</a>
+                </li>
+                <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
+                    <a class="nav-link" href="section-attractions">City Center Attractions</a>
+                </li>
+                <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
+                    <a class="nav-link" href="#">The Great Outdoors</a>
+                </li>
+                <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
+                    <a class="nav-link" href="#">Restaurants | Iconic Pubs</a>
+                </li>
+            </ul>
+        </div>
     </nav>
     <!-- hero-image -->
     <header>
         <div id="hero-image"></div>
     </header>
     <!-- About section -->
-    <section>
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
                     <h2 class="heading"><span class="content-border-style"><i class="fas fa-info-circle"></i>About Dublin</span></h2>
-                    <p>Dublin, the capital city of Ireland is situated on a bay on the east coast, at the mouth of the River Liffey, it lies within the province of Leinster. It is bordered on the south by the Dublin Mountains, a part of the Wicklow Mountains range. Dublin is booming with tech giants calling the Docklands home and new hotels, pubs and restaurants sprouting throughout the city. Despite all the busynesss, Dublin retains its village-like charms, with historic neighborhoods reminders of gentler, slower-moving times. Whether you like your city breaks with a modern sheen or with an other-era luster, Dublin has something for you.  You’ll never run out of things to do and see in Dublin City – there’s just so much happening all year round. </p>
-                    <p>Upon your visit, we implore you to discover Dublin culture, from the famous Guinness Storehouse to St. Patrick's Cathedral, you can take a walk back in time to learn about Irish heritage and events that have shaped Dublin's history. 
-                        Many attractions around the city offer self-guided tours and guided programmes for visitors to learn about the rich history and legends of the site. 
-                        Many also host annual events, festivals, and other activities each season for a richer cultural experience.
-                        </p>
+                    <p>Dublin, the capital city of Ireland is situated on a bay on the east coast, at the mouth of the
+                        River Liffey, it lies within the province of Leinster. It is bordered on the south by the Dublin
+                        Mountains, a part of the Wicklow Mountains range. Dublin is booming with tech giants calling the
+                        Docklands home and new hotels, pubs and restaurants sprouting throughout the city. Despite all
+                        the busynesss, Dublin retains its village-like charms, with historic neighborhoods reminders of
+                        gentler, slower-moving times. Whether you like your city breaks with a modern sheen or with an
+                        other-era luster, Dublin has something for you. You’ll never run out of things to do and see in
+                        Dublin City – there’s just so much happening all year round. </p>
+                    <p>Upon your visit, we implore you to discover Dublin culture, from the famous Guinness Storehouse
+                        to St. Patrick's Cathedral, you can take a walk back in time to learn about Irish heritage and
+                        events that have shaped Dublin's history.
+                        Many attractions around the city offer self-guided tours and guided programmes for visitors to
+                        learn about the rich history and legends of the site.
+                        Many also host annual events, festivals, and other activities each season for a richer cultural
+                        experience.
+                    </p>
                 </div>
             </div>
         </div>
     </section>
-   <!-- Maps -->
-   <div class="container">
-       <div class="row mt-4 mb-4">
-           <div id="city" class="col-sm-6">
+    <!-- Maps -->
+    <div class="container">
+        <div class="row mt-4 mb-4">
+            <div id="city" class="col-sm-6">
                 <button id="attractions" type="button" class="btn btn-danger btn-lg btn-block">City Center Attractions</button>
-           </div>
-           <div id="outdoor" class="col-sm-6">
+            </div>
+            <div id="outdoor" class="col-sm-6">
                 <button id="outdoors" type="button" class="btn btn-danger btn-lg btn-block">The Great Outdoors</button>
-           </div>
-       </div>
-       <div id="map"></div>
-   </div>
-   <!--Contact form-->
-   <section>
-        <div class="">
-            <div class="contact">
+            </div>
+        </div>
+        <div id="map"></div>
+    </div>
+    <!--city center attraction information-->
+    <section id="section-attractions">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 ">
+                    <h2 class="heading resize-font"><span class="content-border-style"><i
+                                class="fas fa-info-circle"></i>City Center Attractions</span></h2>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="assets/images/trinity.jpg" alt="trinity college">
+                        <div class="carousel-caption d-none d-md-block text-white">
+                            <h5>Trinity College Dublin</h5>
+                            <p>Visit this esteemed research university and the home of the Book of Kells, the sole constituent college of the University of Dublin.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/images/botanic-glasnevin.jpg" alt="glasnevin cemetary">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/images/temple-bar.jpg" alt="Temple Bar">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/images/castle-dublin.jpg"
+                            alt="Dublin Castle">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/images/brewery.jpg"
+                            alt="Guinness Storehouse">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+        <!--Contact form-->
+        <section>
+            <div class="contact mt-4">
                 <h1><span class="content-border-style mx-4">Contact Us!</span></h1>
                 <p>Let us know if you have any questions about Dublin!</p>
             </div>
-        </div>
-        <div class="form-container">
-            <form>      
-                <input name="name" type="text" class="form-input" placeholder="Name" />   
-                <input name="email" type="text" class="form-input" placeholder="Email" />
-                <textarea name="text" class="form-input" placeholder="Enter your message here.."></textarea>
-                <input id= "contact-button" type="submit" value="Submit"/>
-            </form>
-        </div>
-   </section>
+            <div class="form-container">
+                <form>
+                    <input name="name" type="text" class="form-input" placeholder="Name" />
+                    <input name="email" type="text" class="form-input" placeholder="Email" />
+                    <textarea name="text" class="form-input" placeholder="Enter your message here.."></textarea>
+                    <input id="contact-button" type="submit" value="Submit" />
+                </form>
+            </div>
+        </section>
 </body>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="assets/js/maps.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4Cv-K3Rbf6wNdZS1pnvjfmUzUAegVDO8&callback=initMap" type="text/javascript"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+<script src="assets/js/maps.js"></script>
+<script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4Cv-K3Rbf6wNdZS1pnvjfmUzUAegVDO8&callback=initMap"
+    type="text/javascript"></script>
+
 </html>
