--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
         <div class="collapse navbar-collapse mr-auto" id="navbarNav">
             <ul class="navbar-nav mt-md-0" id="Menu">
                 <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
-                    <a class="nav-link" href="about-section">About Dublin</a>
+                    <a class="nav-link" href="#about-section">About Dublin</a>
                 </li>
                 <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
-                    <a class="nav-link" href="section-attractions">City Center Attractions</a>
+                    <a class="nav-link" href="#map1">Map</a>
                 </li>
                 <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
-                    <a class="nav-link" href="#">The Great Outdoors</a>
+                    <a class="nav-link" href="#section-attractions">City Center Attractions</a>
+                </li>
+                <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
+                    <a class="nav-link" href="#activities">Outdoor Activites</a>
                 </li>
                 <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
                     <a class="nav-link" href="#">Restaurants | Iconic Pubs</a>
@@ -69,27 +72,29 @@
         </div>
     </section>
     <!-- Maps -->
-    <div class="container">
-        <div class="row mt-4 mb-4">
-            <div id="city" class="col-sm-6">
-                <button id="attractions" type="button" class="btn btn-danger btn-lg btn-block">City Center Attractions</button>
+    <section id="map1">
+        <div class="container">
+            <div class="row mt-4 mb-4">
+                <div id="city" class="col-sm-6">
+                    <button id="attractions" type="button" class="btn btn-danger btn-lg btn-block">City Center Attractions</button>
+                </div>
+                <div id="outdoor" class="col-sm-6">
+                    <button id="outdoors" type="button" class="btn btn-danger btn-lg btn-block">The Great Outdoors</button>
+                </div>
             </div>
-            <div id="outdoor" class="col-sm-6">
-                <button id="outdoors" type="button" class="btn btn-danger btn-lg btn-block">The Great Outdoors</button>
-            </div>
+            <div id="map"></div>
         </div>
-        <div id="map"></div>
-    </div>
-    <!--city center attraction information-->
+    </section>
+    <!--city center attraction heading-->
     <section id="section-attractions">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 ">
-                    <h2 class="heading resize-font"><span class="content-border-style"><i
-                                class="fas fa-info-circle"></i>City Center Attractions</span></h2>
+                    <h2 class="heading resize-font"><span class="content-border-style"><i class="fas fa-info-circle"></i>City Center Attractions</span></h2>
                 </div>
             </div>
         </div>
+        <!--Carousel for city center attractions-->
         <div class="container">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
@@ -146,6 +151,65 @@
                 </a>
             </div>
         </div>
+        <!--city center attraction heading-->
+    <section id="activites">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 ">
+                    <h2 class="heading resize-font"><span class="content-border-style"><i
+                                class="fas fa-info-circle"></i>Outdoor Activities</span></h2>
+                </div>
+            </div>
+        </div>
+        <!-- Carousel for outdoor activities-->
+        <div class="container">
+            <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
+                    <li data-target="#carouselExampleIndicators1" data-slide-to="3"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="assets/images/phoenix-park.jpg" alt="Phoenix park">
+                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                            <h5>Phoenix Park</h5>
+                            <p>The Phoenix Park is the largest enclosed public park in any capital city in Europe. The Phoenix Park is open 24 hrs a day, 7 days a week, all year round. The main gates of the Park at Parkgate Street and Castleknock Gate are open 24 hours.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/images/howth.jpg" alt="Howth">
+                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                            <h5>Howth</h5>
+                            <p>Fresh sea breezes most days. Great views of the rugged coastline and cliffs, Dublin Bay, Howth Harbour and an almost aerial view of both the Baily Lighthouse and Howth Harbour Lighthouse. Pubs and restaurants for a break in the middle of the walking route, as well as at the end.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/images/temple-bar.jpg" alt="Poolbeg Lighthouse">
+                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                            <h5>Poolbeg Lighthouse</h5>
+                            <p>The Poolbeg Lighthouse Walk is a gorgeous coastal walk that’ll blow off the thickest of cobwebs.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/images/castle-dublin.jpg" alt="National Botanic Gardens">
+                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                            <h5>National Botanic Gardens</h5>
+                            <p>Ireland's premier garden is a green oasis situated in the leafy suburb of Glasnevin, not far from Dublin city centre. It is just under 50 acres in size and home to over 17,000 different plant species. Famous for its Victorian glasshouse</p>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
         <!--Contact form-->
         <section>
             <div class="contact mt-4">
@@ -162,18 +226,10 @@
             </div>
         </section>
 </body>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="assets/js/maps.js"></script>
-<script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4Cv-K3Rbf6wNdZS1pnvjfmUzUAegVDO8&callback=initMap"
-    type="text/javascript"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4Cv-K3Rbf6wNdZS1pnvjfmUzUAegVDO8&callback=initMap" type="text/javascript"></script>
 
 </html>
